--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -27,6 +27,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
+    "dotenv": "^17.2.3",
     "googleapis": "^166.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
